# flightdelay-sjsu

./: .gitignore  README.md  REPORT.md  logs.md  main.py  pyproject.toml  requirements.txt
models/: log_reg_acc_6549  model_comparison.py  train_model.py  train_prod_model.py
nbs/: advanced_models.ipynb  agg_for_webapp.ipynb  boost.ipynb  data_check.ipynb  dataengineer.ipynb  flight_analysis_data_Extraction.ipynb  log_reg.ipynb  mlp.ipynb  probabilistic_models.ipynb  torchtab.ipynb  utils.py
webapp/: README.md  app.py  pyproject.toml  requirements.txt
webapp/precalc_metrics/: airline_delay_rate.csv  route_airline_delay_rate.csv  route_delay_rate.csv
webapp/templates/: index.html
