[project]
name = "flight-delay-predictor"
version = "0.1.0"
description = "Flight Delay Prediction Web Application"
authors = [
    {name = "Ishan Sharma", email = "ishan@example.com"},
    {name = "Shashank Cuppala", email = "shashank@example.com"},
    {name = "Yug Patel", email = "yug@example.com"}
]
dependencies = [
    "flask>=2.3.2",
    "scikit-learn>=1.2.2",
    "pandas>=2.0.1",
    "numpy>=1.24.3",
    "joblib>=1.2.0",
    "category_encoders>=2.6.0",
    "gunicorn>=20.1.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
